--- a/TJQ86A_0917/TJQ86A_xmltohtml.html
+++ b/TJQ86A_0917/TJQ86A_xmltohtml.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="TJQ86A_xmltohtml.css">
 </head>
 <body>
     <h1>Súkeník Erik (TJQ86A) órarend</h1>
@@ -60,6 +61,76 @@
       <td>12:00–14:00</td>
       <td>E32</td>
       <td>Fazekas Levente Áron</td>
+      <td>Programtervező informatikus</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>Gyakorlat</td>
+      <td>Valoszinuseg-szamitas</td>
+      <td>Kedd</td>
+      <td>14:00–16:00</td>
+      <td>A1/316 A1 III. em. 316</td>
+      <td>Tóth Norbert</td>
+      <td>Programtervező informatikus</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>Előadás</td>
+      <td>Algoritmusok es vizsgalat</td>
+      <td>Kedd</td>
+      <td>14:00–16:00</td>
+      <td>XXX A1 III. em. 305</td>
+      <td>Dr. Házy Attila</td>
+      <td>Programtervező informatikus</td>
+    </tr>
+    <tr>
+      <td>7</td>
+      <td>Gyakorlat</td>
+      <td>Algoritmusok es vizsgalat</td>
+      <td>Kedd</td>
+      <td>16:00–18:00</td>
+      <td>XXX A1 III. em. 305</td>
+      <td>Dr. Házy Attila</td>
+      <td>Programtervező informatikus</td>
+    </tr>
+    <tr>
+      <td>8</td>
+      <td>Előadás</td>
+      <td>Adatkezeles XML-ben</td>
+      <td>Szerda</td>
+      <td>08:00–10:00</td>
+      <td>T050</td>
+      <td>Dr. Kovács László József</td>
+      <td>Programtervező informatikus</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>Előadás</td>
+      <td>Szoftvertechnologia</td>
+      <td>Szerda</td>
+      <td>08:00–10:00</td>
+      <td>E3</td>
+      <td>Dr. Mileff Péter</td>
+      <td>Programtervező informatikus</td>
+    </tr>
+    <tr>
+      <td>10</td>
+      <td>Gyakorlat</td>
+      <td>Adatkezeles XML-ben</td>
+      <td>Szerda</td>
+      <td>10:00–12:00</td>
+      <td>L103</td>
+      <td>Dr. Bednarik László</td>
+      <td>Programtervező informatikus</td>
+    </tr>
+    <tr>
+      <td>11</td>
+      <td>Gyakorlat</td>
+      <td>Szoftvertechnologia</td>
+      <td>Szerda</td>
+      <td>10:00–12:00</td>
+      <td>E3</td>
+      <td>Dr. Mileff Péter</td>
       <td>Programtervező informatikus</td>
     </tr>
     
